# permissio-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  async_example.py  basic.py  flask_example.py  test_local.py
permisio/: __init__.py  client.py  config.py  errors.py  sync.py
permisio/api/: __init__.py  base.py  resources.py  role_assignments.py  roles.py  tenants.py  users.py
permisio/enforcement/: __init__.py  models.py
permisio/models/: __init__.py  check.py  common.py  resource.py  role.py  role_assignment.py  tenant.py  user.py
permissio/: __init__.py  client.py  config.py  errors.py  py.typed  sync.py
permissio/api/: __init__.py  base.py  resources.py  role_assignments.py  roles.py  tenants.py  users.py
permissio/enforcement/: __init__.py  models.py
permissio/models/: __init__.py  check.py  common.py  resource.py  role.py  role_assignment.py  tenant.py  user.py
tests/: __init__.py  test_integration.py  test_sdk.py
