[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permissio"
version = "0.1.0"
description = "Python SDK for the Permissio.io authorization platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Permissio.io Team", email = "support@permissio.io"}
]
maintainers = [
    {name = "Permissio.io Team", email = "support@permissio.io"}
]
keywords = [
    "permissio",
    "authorization",
    "access-control",
    "rbac",
    "abac",
    "permissions",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "respx>=0.20.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
]

[project.urls]
Homepage = "https://permissio.io"
Documentation = "https://docs.permissio.io/sdk/python"
Repository = "https://github.com/permissio/permissio-python"
Issues = "https://github.com/permissio/permissio-python/issues"
Changelog = "https://github.com/permissio/permissio-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["permissio*"]

[tool.setuptools.package-data]
permissio = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=permissio --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["permissio"]

# Disable override checks for API client methods that intentionally
# have different signatures in subclasses (e.g., get, delete methods)
[[tool.mypy.overrides]]
module = "permissio.api.*"
disable_error_code = ["override"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "UP006", # Use `list` instead of `List` for type annotation (keep for Python 3.9 compat)
    "UP007", # Use `X | Y` for Union types (keep for Python 3.9 compat)
    "UP035", # `typing.Dict` is deprecated (keep for Python 3.9 compat)
    "C901",  # Function is too complex (allow complex functions)
]

[tool.ruff.lint.isort]
known-first-party = ["permissio"]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
